--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
 </head>
 <body>
 
-    <div>
+    <div class="welcomeSection">
+        <h1 class="welcome"></h1>
+        <h2 class="welcomeStatement"></h2>
+        <button class="startGame"></button>
+    </div>
+
+
+    <div class="questionSection">
 
         <h1 class="planetName"></h1>
+        <img src="" alt="">
         <h2 class="planetQuestion"></h2>
         <button class="button" id="answer1"></button>
         <button class="button" id="answer2"></button>
