hard coded to get from answer correct to next page

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
     <div class="welcomeSection">
-        <h1 class="welcome"></h1>
-        <h2 class="welcomeStatement"></h2>
-        <button class="startGame"></button>
+        <h1 class="welcome">Welcome to Solar System Trivia</h1>
+        <h2 class="welcomeStatement">Do you have what it takes to go to the great beyond?</h2>
+        <button class="startGame">Start game</button>
     </div>
 
 
@@ -21,12 +21,20 @@
         <h1 class="planetName"></h1>
         <img src="" alt="">
         <h2 class="planetQuestion"></h2>
+
         <button class="button" id="answer1"></button>
         <button class="button" id="answer2"></button>
         <button class="button" id="answer3"></button>
         <button class="button" id="answer4"></button>
 
     </div>
+
+    <div class="startOverDiv">
+        <h1 class="startOver"></h1>
+        <h2 class="startOverStatement"></h2>
+        <button class="startOverButton"></button>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
