--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="questionSection">
 
         <h1 class="planetName"></h1>
-        <img src="" alt="">
+        <img class="planetImage" src="">
         <h2 class="planetQuestion"></h2>
 
         <button class="button" id="answer1"></button>
