got buttons to process through the objects array

--- a/index.html
+++ b/index.html
@@ -22,17 +22,9 @@
         <img class="planetImage" src="">
         <h2 class="planetQuestion"></h2>
 
-        <button class="button" id="answer1"></button>
-        <button class="button" id="answer2"></button>
-        <button class="button" id="answer3"></button>
-        <button class="button" id="answer4"></button>
-
     </div>
+    <div class="buttonDiv">
 
-    <div class="startOverDiv">
-        <h1 class="startOver"></h1>
-        <h2 class="startOverStatement"></h2>
-        <button class="startOverButton"></button>
     </div>
 
     <script src="script.js"></script>
