buttons are all random and click properly

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <button class="startGame">Start game</button>
     </div>
 
-
     <div class="questionSection">
 
         <h1 class="planetName"></h1>
@@ -23,9 +22,8 @@
         <h2 class="planetQuestion"></h2>
 
     </div>
-    <div class="buttonDiv">
 
-    </div>
+    <div class="buttonDiv"></div>
 
     <script src="script.js"></script>
 </body>
