Updated display and styling

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
         <br/>
         <h2 class="welcomeStatement">Do you have what it takes to go to the great beyond?</h2>
         <br/>
-
-
-        <!-- <button id="openModal">About the Game</button>
-    <div id="modal">
-      <div id="modal-textbox">
-        <a id="close" href="#">Close</a>
-        <h1>Learn to Play Bridge</h1>
-          <p>Bridge is played with four people sitting at a card table using a standard deck of 52 cards (no jokers). The players across from each other form partnerships as North‑South and East‑West.</p>
-          <p>Draw cards to select the person to deal the cards (the dealer). This person distributes the cards face down, in clockwise rotation one at a time, until each player at the table has a hand consisting of 13 cards. </p>
-          <p>After the play of each deal is completed, the opportunity to deal moves around the table clockwise so that each person has a turn to deal out the cards.</p>
-      </div>
-    </div> -->
-
-        <br/>
+        <button id="rulesButton">Rules</button>
         <button class="startGame">Start game</button>
     </div>
+        <!-- Modal for Rules -->
+        <div id="rulesModalContainer">
+            <div id="ruleModalText">
+                <a id="close" href="#">Close</a>
+                <h1>Tips to navigating your way through the solar system</h1>
+                <p>1. Rule 1</p>
+                <p>2. Rule 2</p>
+                <p>3. Rule 3</p>
+            </div>
+        </div>
+
+        <br/>
+
 
     <div class="questionSection">
 
@@ -41,6 +41,6 @@
 
     <div class="buttonDiv"></div>
 
-    <script src="script.js"></script>
+    <script src="testing.js"></script>
 </body>
 </html>
