functioning modal for rules

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Modal for Rules -->
         <div id="rulesModalContainer">
             <div id="ruleModalText">
-                <a id="close" href="#">Close</a>
+                <a id="ruleClose" href="#">Close</a>
                 <h1>Tips to navigating your way through the solar system</h1>
                 <p>1. Rule 1</p>
                 <p>2. Rule 2</p>
@@ -41,6 +41,6 @@
 
     <div class="buttonDiv"></div>
 
-    <script src="testing.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
