--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Solar System Trivia</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,11 +20,11 @@
         <!-- Modal for Rules -->
         <div id="rulesModalContainer">
             <div id="ruleModalText">
-                <a id="ruleClose" href="#">Close</a>
                 <h1>Tips to navigating your way through the solar system</h1>
-                <p>1. Rule 1</p>
-                <p>2. Rule 2</p>
-                <p>3. Rule 3</p>
+                <p>If you answer a question correctly, you will fly to the next planet.</p>
+                <p>If you answer a question incorrectly, your space ship will crash.</p>
+                <p>Goodluck!</p>
+                <button id="ruleClose">Close</button>
             </div>
         </div>
 
@@ -41,6 +41,6 @@
 
     <div class="buttonDiv"></div>
 
-    <script src="script.js"></script>
+    <script src="testing.js"></script>
 </body>
 </html>
