modal is now working for ccorrect answer

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <br/>
         <h2 class="welcomeStatement">Do you have what it takes to go to the great beyond?</h2>
         <br/>
-        <button id="rulesButton">Rules</button>
-        <button class="startGame">Start game</button>
+        <button id="rulesButton">Astronaut Tips</button>
+        <button class="startGame">Start Journey</button>
     </div>
         <!-- Modal for Rules -->
         <div id="rulesModalContainer">
@@ -41,6 +41,16 @@
 
     <div class="buttonDiv"></div>
 
-    <script src="testing.js"></script>
+
+    <div id="planetModalContainer">
+        <div id="planetModalText">
+            <h1 id="planetModalHeader"></h1>
+            <img id="planetModalImage" src="">
+            <p id="planetModalFact"></p>
+            <button id="planetModalButton"></button>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
