Working fully with a checkpoint halfway

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class='lives'>
+        
+    </div>
 
+    <!-- home page section -->
     <div class="welcomeSection">
         <h1 class="welcome">Welcome to Solar System Trivia</h1>
         <br/>
@@ -17,7 +21,7 @@
         <button id="rulesButton">Astronaut Tips</button>
         <button class="startGame">Start Journey</button>
     </div>
-        <!-- Modal for Rules -->
+        <!-- Rule Modal -->
         <div id="rulesModalContainer">
             <div id="ruleModalText">
                 <h1>Tips to navigating your way through the solar system</h1>
@@ -28,20 +32,20 @@
             </div>
         </div>
 
+
         <br/>
 
-
+     <!-- Where the name, image and question are located  -->
     <div class="questionSection">
-
         <h1 class="planetName"></h1>
         <img class="planetImage" src="">
         <h2 class="planetQuestion"></h2>
-
     </div>
 
+    <!-- where the created buttons are going -->
     <div class="buttonDiv"></div>
 
-
+    <!-- the in game modal for question right/wrong -->
     <div id="planetModalContainer">
         <div id="planetModalText">
             <h1 id="planetModalHeader"></h1>
