added button style on modals

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <img id="planetModalImage" src="">
             <p id="planetModalFact"></p>
             <div class="buttonsForPlanetModal">
-                <!-- <button id="planetToHome"></button> -->
+                <button id="planetToHome"></button>
                 <button id="planetModalButton"></button>
             </div>
         </div>
