--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
 
 </head>
 <body>
+    <!-- lives left -->
     <div class='lives'>
-        
+        <p id='lifeText'>Lives left: </p>
+        <img class='lifeImage' id='lifeOne' src="./images/astronaut-life.png">
+        <img class='lifeImage' id='lifeTwo' src="./images/astronaut-life.png">
+        <img class='lifeImage' id='lifeThree' src="./images/astronaut-life.png">
     </div>
     
 
