added a hint button

--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
 
 </head>
 <body>
+    <div class='bodyDiv'>
     <!-- lives left -->
     <div class='lives'>
+        <button id="hintButton" style="float: right">Hint</button>
         <p id='lifeText'>Lives left: </p>
         <img class='lifeImage' id='lifeOne' src="./images/astronaut-life.png">
         <img class='lifeImage' id='lifeTwo' src="./images/astronaut-life.png">
         <img class='lifeImage' id='lifeThree' src="./images/astronaut-life.png">
     </div>
     
-
     <!-- home page section -->
     <div class="welcomeSection">
         <h1 class="welcome">Welcome to</h1>
@@ -74,6 +75,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="testing.js"></script>
+</div>
 </body>
 </html>
