hint fully functions

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img class='lifeImage' id='lifeTwo' src="./images/astronaut-life.png">
         <img class='lifeImage' id='lifeThree' src="./images/astronaut-life.png">
     </div>
-    
+
     <!-- home page section -->
     <div class="welcomeSection">
         <h1 class="welcome">Welcome to</h1>
@@ -66,16 +66,19 @@
     <div id="planetModalContainer">
         <div id="planetModalText">
             <h1 id="planetModalHeader"></h1>
-            <img id="planetModalImage" src="">
+            <div id="modalImagePlanet">
+                <img id="planetModalImage" src="">
+            </div>
             <p id="planetModalFact"></p>
             <div class="buttonsForPlanetModal">
                 <button id="planetToHome"></button>
                 <button id="planetModalButton"></button>
+                <button id='hintClosed'></button>
             </div>
         </div>
     </div>
 
-    <script src="testing.js"></script>
+    <script src="script.js"></script>
 </div>
 </body>
 </html>
