home button works

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class='bodyDiv'>
     <!-- lives left -->
     <div class='lives'>
+        <button id="mainHome">Home</button>
         <button id="hintButton" style="float: right">Hint</button>
         <p id='lifeText'>Lives left: </p>
         <img class='lifeImage' id='lifeOne' src="./images/astronaut-life.png">
