all but lives reset at new home screen

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
         <button id="mainHome">Home</button>
         <button id="hintButton" style="float: right">Hint</button>
         <p id='lifeText'>Lives left: </p>
+    <div id="lifeCounterDiv">
         <img class='lifeImage' id='lifeOne' src="./images/astronaut-life.png">
         <img class='lifeImage' id='lifeTwo' src="./images/astronaut-life.png">
         <img class='lifeImage' id='lifeThree' src="./images/astronaut-life.png">
+    </div>
     </div>
 
     <!-- home page section -->
