--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
             <div id="ruleModalText">
                 <h1 id="ruleModalHeader">Astronaut Tips</h1>
                 <p>If you answer a question correctly, you will fly to the next planet.</p>
-                <p>If you answer a question incorrectly, your space ship will crash causing you to start over.</p>
-                <p>Making it to the first gas giant rewards you with a checkpoint!</p>
+                <p>If you answer a question incorrectly, you will lose a life.</p>
+                <p>Making it to the first gas giant rewards you with a checkpoint.</p>
+                <p>Make it to the end of the solar system and kick your hyperdrive into action.</p>
                 <p>Goodluck!</p>
                 <button id="ruleClose">Close</button>
             </div>
