--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fjalla+One&family=Georama&display=swap" rel="stylesheet">
-
+    
+    <link rel="icon" href="./images/rocket-icon.png">
 </head>
 <body>
     <div class='bodyDiv'>
