--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             <div class="buttonsForPlanetModal">
                 <button id="planetToHome"></button>
                 <button id="planetModalButton"></button>
+                <button id="checkpointButton"></button>
                 <button id='hintClosed'></button>
             </div>
         </div>
